[gd_scene load_steps=25 format=2]

[ext_resource path="res://sprite/buttonstyle.png" type="Texture" id=1]
[ext_resource path="res://fonts/kranky/Kranky.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprite/try.png" type="Texture" id=4]
[ext_resource path="res://sprite/aufgabe.png" type="Texture" id=5]
[ext_resource path="res://sprite/close.png" type="Texture" id=6]
[ext_resource path="res://sprite/info.png" type="Texture" id=7]
[ext_resource path="res://sprite/exer.png" type="Texture" id=8]
[ext_resource path="res://scripts/Widerstand.gd" type="Script" id=9]
[ext_resource path="res://scenes/ButtonBack.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprite/switchD.png" type="Texture" id=11]
[ext_resource path="res://scripts/Base.gd" type="Script" id=12]
[ext_resource path="res://scripts/Exer.gd" type="Script" id=13]
[ext_resource path="res://sprite/a3/wider.png" type="Texture" id=14]
[ext_resource path="res://sprite/a3/unit.png" type="Texture" id=15]
[ext_resource path="res://sprite/standard.png" type="Texture" id=16]
[ext_resource path="res://sprite/switch.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 37
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 38
font_data = ExtResource( 2 )

[node name="Aufgabe_3" type="Node2D" groups=["saver"]]
script = ExtResource( 12 )
__meta__ = {
"_editor_description_": ""
}

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 16 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="Frame" type="Node2D" parent="."]
position = Vector2( 102, 217 )
scale = Vector2( 0.7, 0.7 )

[node name="try" type="Sprite" parent="Frame"]
texture = ExtResource( 4 )

[node name="widertry" type="Label" parent="Frame/try"]
margin_left = -119.0
margin_top = -113.0
margin_right = 119.0
margin_bottom = 106.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "probieren"
align = 1
valign = 2

[node name="Try" type="Node2D" parent="Frame"]
visible = false
position = Vector2( -145.714, -310 )
scale = Vector2( 1.42857, 1.42857 )
z_index = 1
script = ExtResource( 13 )

[node name="Widerstand" type="Node2D" parent="Frame/Try"]
script = ExtResource( 9 )

[node name="Bg" type="Sprite" parent="Frame/Try/Widerstand"]
position = Vector2( 300, 199 )
texture = ExtResource( 16 )

[node name="title" type="Label" parent="Frame/Try/Widerstand"]
margin_left = 54.0
margin_top = 3.0
margin_right = 545.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Farbringe und Widerstandsgröße"

[node name="colors" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="one" type="Sprite" parent="Frame/Try/Widerstand/colors"]
position = Vector2( 50, 330 )

[node name="two" type="Sprite" parent="Frame/Try/Widerstand/colors"]
position = Vector2( 100, 330 )

[node name="three" type="Sprite" parent="Frame/Try/Widerstand/colors"]
position = Vector2( 150, 330 )

[node name="four" type="Sprite" parent="Frame/Try/Widerstand/colors"]
position = Vector2( 200, 330 )

[node name="one" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/one"]
position = Vector2( 50, 300 )
texture = ExtResource( 17 )

[node name="up" type="Control" parent="Frame/Try/Widerstand/one/upS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/one"]
position = Vector2( 50, 360 )
texture = ExtResource( 11 )

[node name="do" type="Control" parent="Frame/Try/Widerstand/one/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="two" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/two"]
position = Vector2( 100, 300 )
texture = ExtResource( 17 )

[node name="up2" type="Control" parent="Frame/Try/Widerstand/two/upS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/two"]
position = Vector2( 100, 360 )
texture = ExtResource( 11 )

[node name="do2" type="Control" parent="Frame/Try/Widerstand/two/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="three" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/three"]
position = Vector2( 150, 300 )
texture = ExtResource( 17 )

[node name="up3" type="Control" parent="Frame/Try/Widerstand/three/upS"]
margin_left = -16.0
margin_top = -15.0
margin_right = 19.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/three"]
position = Vector2( 150, 360 )
texture = ExtResource( 11 )

[node name="do3" type="Control" parent="Frame/Try/Widerstand/three/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="four" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/four"]
position = Vector2( 200, 300 )
texture = ExtResource( 17 )

[node name="up4" type="Control" parent="Frame/Try/Widerstand/four/upS"]
margin_left = -15.0
margin_top = -15.0
margin_right = 20.0
margin_bottom = 10.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/four"]
position = Vector2( 200, 360 )
texture = ExtResource( 11 )

[node name="do4" type="Control" parent="Frame/Try/Widerstand/four/dowS"]
margin_left = -18.0
margin_top = -13.0
margin_right = 17.0
margin_bottom = 12.0

[node name="digits" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="oneD" type="Sprite" parent="Frame/Try/Widerstand/digits"]
position = Vector2( 300, 330 )

[node name="twoD" type="Sprite" parent="Frame/Try/Widerstand/digits"]
position = Vector2( 350, 330 )

[node name="threeD" type="Sprite" parent="Frame/Try/Widerstand/digits"]
position = Vector2( 400, 330 )

[node name="fourD" type="Sprite" parent="Frame/Try/Widerstand/digits"]
position = Vector2( 450, 330 )

[node name="one2" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/one2"]
position = Vector2( 300, 300 )
texture = ExtResource( 17 )

[node name="upD" type="Control" parent="Frame/Try/Widerstand/one2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/one2"]
position = Vector2( 300, 360 )
texture = ExtResource( 11 )

[node name="doD" type="Control" parent="Frame/Try/Widerstand/one2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="two2" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/two2"]
position = Vector2( 350, 300 )
texture = ExtResource( 17 )

[node name="upD2" type="Control" parent="Frame/Try/Widerstand/two2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/two2"]
position = Vector2( 350, 360 )
texture = ExtResource( 11 )

[node name="doD2" type="Control" parent="Frame/Try/Widerstand/two2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="three2" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/three2"]
position = Vector2( 400, 300 )
texture = ExtResource( 17 )

[node name="upD3" type="Control" parent="Frame/Try/Widerstand/three2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/three2"]
position = Vector2( 400, 360 )
texture = ExtResource( 11 )

[node name="doD3" type="Control" parent="Frame/Try/Widerstand/three2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="four2" type="Node2D" parent="Frame/Try/Widerstand"]

[node name="upS" type="Sprite" parent="Frame/Try/Widerstand/four2"]
position = Vector2( 450, 300 )
texture = ExtResource( 17 )

[node name="upD4" type="Control" parent="Frame/Try/Widerstand/four2/upS"]
margin_left = -17.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0

[node name="dowS" type="Sprite" parent="Frame/Try/Widerstand/four2"]
position = Vector2( 450, 360 )
texture = ExtResource( 11 )

[node name="doD4" type="Control" parent="Frame/Try/Widerstand/four2/dowS"]
margin_left = -17.0
margin_top = -15.0
margin_right = 18.0
margin_bottom = 10.0

[node name="Unit" type="Sprite" parent="Frame/Try/Widerstand"]
position = Vector2( 500, 330 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="Frame/Try/Widerstand"]
margin_left = 13.0
margin_top = 68.0
margin_right = 578.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Um die winzigen Widerstände mit dem Widerstandswert in Ohm zu kennzeichnen, gibt es einen internationalen Farbcode mit vier Ringen. Ein Ring ist dabei meistens gold- oder silberfarben; das ist der 5%- bzw. 10%-Toleranzwert. Diesen Ring lege man nach rechts, also nach hinten. Außerdem ist der 1. Farbring sichtbar näher an einer Seite des Widerstandkörpers, also vorne. Der 4-Ring Farbcode wird von links nach rechts in einer Widerstands-Tabelle abgelesen Beachte: Ring 1 mit der Farbe \"schwarz\" gibt es nicht!"
autowrap = true

[node name="ButtonClose2" type="Node2D" parent="Frame/Try/Widerstand"]
position = Vector2( 574, 29 )
scale = Vector2( 0.4, 0.4 )

[node name="ButtonSprite" type="Sprite" parent="Frame/Try/Widerstand/ButtonClose2"]
texture = ExtResource( 6 )

[node name="Buttonlabel" type="Label" parent="Frame/Try/Widerstand/ButtonClose2/ButtonSprite"]
margin_left = -45.0
margin_top = -45.0
margin_right = 50.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
text = "X"
align = 1

[node name="Frame2" type="Node2D" parent="."]
position = Vector2( 297, 217 )
scale = Vector2( 0.7, 0.7 )

[node name="exer" type="Sprite" parent="Frame2"]
texture = ExtResource( 8 )

[node name="exer" type="Label" parent="Frame2/exer"]
margin_left = -117.0
margin_top = -111.0
margin_right = 121.0
margin_bottom = 107.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "prüfen"
align = 1
valign = 2

[node name="Exer" type="Node2D" parent="Frame2"]
visible = false
position = Vector2( -414.286, -310 )
scale = Vector2( 1.42857, 1.42857 )
z_index = 1
script = ExtResource( 13 )

[node name="Aufgabe" type="Sprite" parent="Frame2/Exer"]
texture = ExtResource( 5 )
centered = false

[node name="title" type="Label" parent="Frame2/Exer/Aufgabe"]
margin_left = 5.00022
margin_top = -1.0
margin_right = 548.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Wie groß sind die Widerstände?"
align = 1

[node name="text" type="Label" parent="Frame2/Exer/Aufgabe"]
margin_left = 18.0
margin_top = 75.0
margin_right = 580.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Rot-Rot-Braun
Gelb-Violett-Orange-Gold
Blau-Grau-Rot-Silber
Welchen Farbcode hat der Widerstand 470 Ohm mit 5% Toleranz?
Welchen Farbcode hat der Widerstand 1 Megaohm (1 MOhm) mit 10% Toleranz?
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer"]
position = Vector2( 574, 29 )
scale = Vector2( 0.4, 0.4 )

[node name="ButtonSprite" type="Sprite" parent="Frame2/Exer/ButtonClose"]
texture = ExtResource( 6 )

[node name="Buttonlabel" type="Label" parent="Frame2/Exer/ButtonClose/ButtonSprite"]
margin_left = -45.0
margin_top = -45.0
margin_right = 50.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "X"
align = 1

[node name="Frame3" type="Node2D" parent="."]
position = Vector2( 490, 217 )
scale = Vector2( 0.7, 0.7 )

[node name="info" type="Sprite" parent="Frame3"]
texture = ExtResource( 7 )

[node name="info" type="Label" parent="Frame3/info"]
margin_left = -121.0
margin_top = -116.0
margin_right = 122.0
margin_bottom = 113.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "lesen"
align = 1
valign = 2

[node name="Info" type="Node2D" parent="Frame3"]
visible = false
position = Vector2( -700, -310 )
scale = Vector2( 1.42857, 1.42857 )
z_index = 1
script = ExtResource( 13 )

[node name="Aufgabe" type="Sprite" parent="Frame3/Info"]
texture = ExtResource( 5 )
centered = false

[node name="title" type="Label" parent="Frame3/Info/Aufgabe"]
margin_left = 5.0
margin_right = 548.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Widerstände"
align = 1

[node name="text" type="Label" parent="Frame3/Info/Aufgabe"]
margin_left = 18.0
margin_top = 75.0
margin_right = 580.0
margin_bottom = 324.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Ein Widerstand ist ein Bauteil, das dafür sorgt, dass an einem anderen Bauteil nicht die komplette Spannung von 5 V abfällt, sondern sie zwischen dem Bauteil und dem Widerstand aufgeteilt wird. Somit wird der Strom, der durch das Bauteil fließt, begrenzt. Auf Widerständen wird durch Farbringe angegeben, wie groß ein Widerstand ist . "
autowrap = true

[node name="Wider" type="Sprite" parent="Frame3/Info/Aufgabe"]
position = Vector2( 290, 257 )
texture = ExtResource( 14 )

[node name="text2" type="Label" parent="Frame3/Info/Aufgabe/Wider"]
margin_left = -97.0
margin_top = 21.0
margin_right = 97.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Symbol für Widerstände"
autowrap = true

[node name="ButtonClose" type="Node2D" parent="Frame3/Info"]
position = Vector2( 574, 29 )
scale = Vector2( 0.4, 0.4 )

[node name="ButtonSprite" type="Sprite" parent="Frame3/Info/ButtonClose"]
texture = ExtResource( 6 )

[node name="Buttonlabel" type="Label" parent="Frame3/Info/ButtonClose/ButtonSprite"]
margin_left = -45.0
margin_top = -45.0
margin_right = 50.0
margin_bottom = 43.0
mouse_filter = 1
custom_fonts/font = SubResource( 7 )
text = "X"
align = 1

[node name="ButtonBack" parent="." instance=ExtResource( 10 )]

[node name="Buttonstyle" type="Sprite" parent="."]
position = Vector2( 300, 66 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Buttonstyle"]
margin_left = -194.0
margin_top = -37.0
margin_right = 195.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 8 )
text = "Widerstände"
align = 1

[connection signal="gui_input" from="Frame/try/widertry" to="." method="_on_widertry_gui_input"]
[connection signal="mouse_entered" from="Frame/try/widertry" to="." method="_on_try_mouse_entered"]
[connection signal="mouse_exited" from="Frame/try/widertry" to="." method="_on_try_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/one/upS/up" to="Frame/Try/Widerstand" method="_on_up_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/one/upS/up" to="Frame/Try/Widerstand" method="_on_up_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/one/upS/up" to="Frame/Try/Widerstand" method="_on_up_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/one/dowS/do" to="Frame/Try/Widerstand" method="_on_do_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/one/dowS/do" to="Frame/Try/Widerstand" method="_on_do_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/one/dowS/do" to="Frame/Try/Widerstand" method="_on_do_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/two/upS/up2" to="Frame/Try/Widerstand" method="_on_up2_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/two/upS/up2" to="Frame/Try/Widerstand" method="_on_up2_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/two/upS/up2" to="Frame/Try/Widerstand" method="_on_up2_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/two/dowS/do2" to="Frame/Try/Widerstand" method="_on_do2_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/two/dowS/do2" to="Frame/Try/Widerstand" method="_on_do2_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/two/dowS/do2" to="Frame/Try/Widerstand" method="_on_do2_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/three/upS/up3" to="Frame/Try/Widerstand" method="_on_up3_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/three/upS/up3" to="Frame/Try/Widerstand" method="_on_up3_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/three/upS/up3" to="Frame/Try/Widerstand" method="_on_up3_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/three/dowS/do3" to="Frame/Try/Widerstand" method="_on_do3_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/three/dowS/do3" to="Frame/Try/Widerstand" method="_on_do3_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/three/dowS/do3" to="Frame/Try/Widerstand" method="_on_do3_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/four/upS/up4" to="Frame/Try/Widerstand" method="_on_up4_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/four/upS/up4" to="Frame/Try/Widerstand" method="_on_up4_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/four/upS/up4" to="Frame/Try/Widerstand" method="_on_up4_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/four/dowS/do4" to="Frame/Try/Widerstand" method="_on_do4_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/four/dowS/do4" to="Frame/Try/Widerstand" method="_on_do4_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/four/dowS/do4" to="Frame/Try/Widerstand" method="_on_do4_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/one2/upS/upD" to="Frame/Try/Widerstand" method="_on_upD_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/one2/upS/upD" to="Frame/Try/Widerstand" method="_on_upD_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/one2/upS/upD" to="Frame/Try/Widerstand" method="_on_upD_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/one2/dowS/doD" to="Frame/Try/Widerstand" method="_on_doD_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/one2/dowS/doD" to="Frame/Try/Widerstand" method="_on_doD_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/one2/dowS/doD" to="Frame/Try/Widerstand" method="_on_doD_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/two2/upS/upD2" to="Frame/Try/Widerstand" method="_on_up2_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/two2/upS/upD2" to="Frame/Try/Widerstand" method="_on_upD2_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/two2/upS/upD2" to="Frame/Try/Widerstand" method="_on_upD2_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/two2/dowS/doD2" to="Frame/Try/Widerstand" method="_on_do2_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/two2/dowS/doD2" to="Frame/Try/Widerstand" method="_on_doD2_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/two2/dowS/doD2" to="Frame/Try/Widerstand" method="_on_doD2_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/three2/upS/upD3" to="Frame/Try/Widerstand" method="_on_up3_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/three2/upS/upD3" to="Frame/Try/Widerstand" method="_on_upD3_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/three2/upS/upD3" to="Frame/Try/Widerstand" method="_on_upD3_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/three2/dowS/doD3" to="Frame/Try/Widerstand" method="_on_do3_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/three2/dowS/doD3" to="Frame/Try/Widerstand" method="_on_doD3_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/three2/dowS/doD3" to="Frame/Try/Widerstand" method="_on_doD3_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/four2/upS/upD4" to="Frame/Try/Widerstand" method="_on_up4_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/four2/upS/upD4" to="Frame/Try/Widerstand" method="_on_upD4_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/four2/upS/upD4" to="Frame/Try/Widerstand" method="_on_upD4_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/four2/dowS/doD4" to="Frame/Try/Widerstand" method="_on_do4_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/four2/dowS/doD4" to="Frame/Try/Widerstand" method="_on_doD4_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/four2/dowS/doD4" to="Frame/Try/Widerstand" method="_on_doD4_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Widerstand/ButtonClose2/ButtonSprite/Buttonlabel" to="Frame/Try/Widerstand" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Widerstand/ButtonClose2/ButtonSprite/Buttonlabel" to="Frame/Try/Widerstand" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Widerstand/ButtonClose2/ButtonSprite/Buttonlabel" to="Frame/Try/Widerstand" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame2/exer/exer" to="." method="_on_exer_gui_input"]
[connection signal="mouse_entered" from="Frame2/exer/exer" to="." method="_on_exer_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/exer/exer" to="." method="_on_exer_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame3/info/info" to="." method="_on_info_gui_input"]
[connection signal="mouse_entered" from="Frame3/info/info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/info/info" to="." method="_on_info_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_exited"]
